force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Delete_Not_Started_Surveys_for_Days__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Delete_Not_Started_Surveys_for_Days__c</fullName>
    <description>Number of days after which survey responses that have not been started will be deleted.</description>
    <inlineHelpText>Specify the number of days after which survey responses that have not been started will be automatically deleted. To activate this feature, ensure that the scheduled job &quot;SurveyOperationsSchedulable&quot; is activated. This setting helps manage and clean up survey responses that have not been initiated by participants within the specified timeframe.</inlineHelpText>
    <label>Delete Not Started Surveys after Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>