force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Delete_Records_Error__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Delete_Records_Error__c</fullName>
    <description>This refers to the issues or problems that occur when attempting to delete survey responses.</description>
    <inlineHelpText>This refers to the issues or problems that occur when attempting to delete survey responses.</inlineHelpText>
    <label>Delete Records Error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>