force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Description__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Description__c</fullName>
    <description>Description of the survey.</description>
    <label>Description</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>