force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Do_Not_Log_Email_Activity__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Do_Not_Log_Email_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to avoid logging an email activity with a survey recipient (only for Contact or Lead) record.</description>
    <inlineHelpText>Enable this option to prevent the logging of email activity with a survey recipient&apos;s Contact or Lead record. When enabled, email interactions related to the survey will not be recorded as email activities in the recipient&apos;s record.</inlineHelpText>
    <label>Do Not Log Email Activity</label>
    <type>Checkbox</type>
</CustomField>