force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Email_Embedded_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Email_Embedded_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Question to be embedded in the survey invitation notification.</description>
    <inlineHelpText>A question that needs to be embedded in the survey invitation notification.</inlineHelpText>
    <label>Email Embedded Question</label>
    <referenceTo>ArdiraSurvey__Question__c</referenceTo>
    <relationshipLabel>Embedding Surveys</relationshipLabel>
    <relationshipName>Embedding_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>