force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Enable_Captcha__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Enable_Captcha__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show / Hide Captcha setting in the Survey.</description>
    <inlineHelpText>Selecting this option enables Captcha-based verification in the survey response interface. Participants will be required to complete a Captcha challenge as a part of the response submission process to ensure the authenticity of the responses.</inlineHelpText>
    <label>Captcha Verification</label>
    <type>Checkbox</type>
</CustomField>