force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Enable_Question_Flagging__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Enable_Question_Flagging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Question flagging with workflow for the survey.</description>
    <inlineHelpText>Enabling this option allows for question flagging with associated workflow functionality for the survey. This feature enables the ability to flag specific questions within the survey, such as &quot;Need More Info&quot; or &quot;Accepted,&quot; during the data correction stages of the workflow processes.</inlineHelpText>
    <label>Question Flagging with Workflow</label>
    <type>Checkbox</type>
</CustomField>