force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Enable_Scoring_Survey_Responses__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Enable_Scoring_Survey_Responses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enable, show scoring option tab from all survey question type otherwise it will hide</description>
    <inlineHelpText>Enabling this option allows for scoring of question responses. Once enabled, you will have the ability to configure scoring-related options for both individual questions and the survey as a whole during the survey-building process.</inlineHelpText>
    <label>Survey Response Scoring</label>
    <type>Checkbox</type>
</CustomField>