force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Enable_Workflow__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Enable_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, show workflow tab</description>
    <inlineHelpText>Enabling this option activates the data correction and review workflow functionality for the survey. This allows for efficient handling of data corrections and review processes associated with the survey.</inlineHelpText>
    <label>Data Correction and Review Workflow</label>
    <type>Checkbox</type>
</CustomField>