force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Execute_Synchronous_Mapping_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Execute_Synchronous_Mapping_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If one or more response mapping rule has &quot;Execute Sync Enabled&quot; set to true, this flag is set to true.</description>
    <inlineHelpText>If one or more response mapping rule has &quot;Execute Sync Enabled&quot; set to true, this flag is set to true.</inlineHelpText>
    <label>Execute Synchronous Mapping</label>
    <type>Checkbox</type>
</CustomField>