force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Experience_Cloud_Survey_Response_Page__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Experience_Cloud_Survey_Response_Page__c</fullName>
    <description>Enter the URL of the designated experience cloud page where respondents can easily complete the survey. Ensure that the page is hosted on the selected experience cloud site and has been built using the SurveyVista Responder LWC for a seamless survey experience.</description>
    <inlineHelpText>Enter the URL of the designated experience cloud page where respondents can easily complete the survey. Ensure that the page is hosted on the selected experience cloud site and has been built using the SurveyVista Responder LWC for a seamless survey experience.</inlineHelpText>
    <label>Experience Cloud Site - Responder Page</label>
    <length>40</length>
    <type>Text</type>
</CustomField>