force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Expire_after_Allowed_Time_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Expire_after_Allowed_Time_to_Respond__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this option expires a survey link once the designated response time limit is reached, ensuring timely data collection and enhancing survey result accuracy. Adjust the response time limit duration as needed to accommodate your survey requirements.</description>
    <inlineHelpText>Enabling this option expires a survey link once the designated response time limit is reached, ensuring timely data collection and enhancing survey result accuracy. Adjust the response time limit duration as needed to accommodate your survey requirements.</inlineHelpText>
    <label>Expire Link after Time Limit</label>
    <type>Checkbox</type>
</CustomField>