force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__File_Storage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__File_Storage__c</fullName>
    <description>Select file storage type.</description>
    <inlineHelpText>Choose the desired file storage type:
Salesforce: Store files in the Salesforce file storage.
Amazon Web Services: Store files in the Amazon Web Services file storage.</inlineHelpText>
    <label>File Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>AWS</fullName>
                <label>Amazon Web Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>