force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Float_Title_on_Border__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Float_Title_on_Border__c</fullName>
    <description>Select your choice to float section title on section border.</description>
    <inlineHelpText>Choose whether to float the section title on the section border in the survey response interface. When enabled, the section title will appear on the border of the section area, providing a distinct visual distinction and enhancing the readability of the survey. This option allows you to customize the presentation of the section titles and create a unique and engaging survey experience for participants.</inlineHelpText>
    <label>Section Title Float on Border</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>