force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Font_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Font_Type__c</fullName>
    <description>Font to be used for displaying the survey.</description>
    <inlineHelpText>Choose a font family to be used for the question and response text in the survey. This allows you to customize the typography and style of the text, giving the survey interface a unique and visually appealing look.</inlineHelpText>
    <label>Font Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arial</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Verdana</fullName>
            </value>
            <value>
                <fullName>Tahoma</fullName>
            </value>
            <value>
                <fullName>Garamond</fullName>
            </value>
            <value>
                <fullName>Times New Roman</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>