force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__For_External_Participants_Shortened_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__For_External_Participants_Shortened_URL__c</fullName>
    <description>Survey Shortened Response URL to be used by authenticated and unauthenticated community users.</description>
    <inlineHelpText>Survey Shortened Response URL to be used by authenticated and unauthenticated community users.</inlineHelpText>
    <label>For External Participants Shortened URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>