force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__For_Internal_Participants_Shortened_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__For_Internal_Participants_Shortened_URL__c</fullName>
    <description>Survey Shortened Response URL to be used by participants who have login credentials for the org.</description>
    <inlineHelpText>Survey Shortened Response URL to be used by participants who have login credentials for the org.</inlineHelpText>
    <label>For Internal Participants Shortened URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>