force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__From_Email_Address__c</fullName>
    <description>Select a From email address to use for Survey Notification Email Alerts.</description>
    <inlineHelpText>Choose the email address to be used as the &quot;From&quot; address for Survey Notification Emails. This setting allows you to specify the sender&apos;s email address for a personalized and recognizable email communication experience. You can select a previously configured org-wide email address or choose &quot;Current user&apos;s Email Address&quot; to use the email associated with the user initiating the email. Additional org-wide email addresses can be configured in Salesforce setup to provide more options for sender addresses.</inlineHelpText>
    <label>Sender Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>