force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Generate_JSON__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Generate_JSON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, Survey Result JSON is generated when the survey status changes to &quot;Open&quot;.</description>
    <inlineHelpText>If true, Survey Result JSON is generated when the survey status changes to &quot;Open&quot;.</inlineHelpText>
    <label>Dep Generate JSON</label>
    <type>Checkbox</type>
</CustomField>