force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Honor_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Honor_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, if a survey is assigned to a lead or contact as a recipient and the recipient record Email Opt Out field is set to true, do not send email notification.</description>
    <inlineHelpText>When enabled, if a survey is assigned to a Lead or Contact recipient and the Email Opt Out field is set to true in the recipient&apos;s record, no email notification will be sent. This setting respects the recipient&apos;s preference to opt out of email communications, ensuring compliance with their choices and avoiding sending unwanted emails.</inlineHelpText>
    <label>Respect Email Opt-Out</label>
    <type>Checkbox</type>
</CustomField>