force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Input_Text_BG_Color__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Input_Text_BG_Color__c</fullName>
    <description>Use this option to change the input text controls background color in survey responder interface. Use hex or RGB color code as a value.</description>
    <inlineHelpText>Input Text Background Color allows you to customize the background color of input controls in the survey responder interface. You can use either a hex color code (e.g., #RRGGBB) or an RGB color code (e.g., rgb(R, G, B)) as the value.</inlineHelpText>
    <label>Input Text Background Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>