force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Internal_Response_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Internal_Response_URL__c</fullName>
    <description>Survey Response URL to be used by users who have login credentials for the org.</description>
    <formula>LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) &amp; &quot;ArdiraSurvey/SurveyResponse.app?recordId=&quot; &amp; Id &amp; &quot;&amp;logicalId=&quot; &amp; ArdiraSurvey__Logical_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Survey Response URL to be used by participants who have login credentials for the org.</inlineHelpText>
    <label>Internal Response URL</label>
    <type>Text</type>
</CustomField>