force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Is_Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Is_Latest_Version__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to indicate if this survey is the latest version.</description>
    <inlineHelpText>When checked, it indicates that the survey is the latest version in the chain of versioned surveys.</inlineHelpText>
    <label>Is Latest Version</label>
    <type>Checkbox</type>
</CustomField>