force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Label__c</fullName>
    <description>Survey label.</description>
    <inlineHelpText>Survey label.</inlineHelpText>
    <label>Dep Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>