force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Label_Short__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Label_Short__c</fullName>
    <description>This field contains the first 255 characters of the Survey label. This field can be used for history tracking and for email merge field.</description>
    <inlineHelpText>This field contains the first 255 characters of the Survey label. This field can be used for history tracking and for email merge field.</inlineHelpText>
    <label>Label Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>