force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Labels_And_Messages__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Labels_And_Messages__c</fullName>
    <description>labels and messages used during survey response. The default values are in English need to be updated to the language of the survey.</description>
    <inlineHelpText>Labels and messages used during survey response. The default values are in English. Need to be updated to the survey language.</inlineHelpText>
    <label>Labels And Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>