force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Last_Design_Template_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Last_Design_Template_Sync_Date__c</fullName>
    <description>This field records the date and time when the survey was last updated with any changes made to the associated design template.</description>
    <inlineHelpText>This field logs the date and time of the most recent update to the survey, capturing any modifications made to the associated design template.</inlineHelpText>
    <label>Last Design Template Sync Date</label>
    <type>DateTime</type>
</CustomField>