force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Layout_Type__c</fullName>
    <description>Select a layout for view response interface and survey result report page.</description>
    <inlineHelpText>Choose the layout type for the preview interface and survey result report page:

    Compact: Offers a condensed display, maximizing space utilization for a more efficient view.
    Comfy: Provides a more spacious and comfortable display, ensuring a user-friendly experience with ample spacing and padding around the elements.</inlineHelpText>
    <label>Response Layout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compact</fullName>
            </value>
            <value>
                <fullName>Comfy</fullName>
                <default>true</default>
                <label>Comfy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>