force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Link_Uploaded_Files_To_Target_Account__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Link_Uploaded_Files_To_Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a document uploaded with a question response will be linked with the target account record.</description>
    <inlineHelpText>When enabled, uploaded documents associated with question responses will be linked to the target account record for easy reference.</inlineHelpText>
    <label>Link Uploaded Files To Target Account</label>
    <type>Checkbox</type>
</CustomField>