force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Link_Uploaded_Files_To_Target_Record__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Link_Uploaded_Files_To_Target_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a document uploaded with a question response will be linked with the target record.</description>
    <inlineHelpText>When enabled, uploaded documents associated with question responses will be automatically linked to the survey target/subject record for easy reference.</inlineHelpText>
    <label>Link Uploaded Files To Target Record</label>
    <type>Checkbox</type>
</CustomField>