force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Logo_Image__c</fullName>
    <description>Image to be displayed in the logo area of the survey.</description>
    <inlineHelpText>Upload Logo image in jpg / png / gif format with maximum height of 300px.The recommended logo image file size should be less than or equal to 100 KB and recommended dimensions are: 300x55px or 300x120px.</inlineHelpText>
    <label>Logo Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>