force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Mark_In_Progress_Surveys_as_Completed__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Mark_In_Progress_Surveys_as_Completed__c</fullName>
    <description>Mark an in progress survey response as completed after this number of days since the last response update.</description>
    <inlineHelpText>Specify the number of days since the last update to a participant&apos;s survey response after which the response will be automatically marked as completed. This feature ensures that in-progress survey responses are automatically completed if no updates are made within the specified timeframe. To enable this functionality, activate the scheduled job &quot;SurveyCompletionSchedulable&quot;.</inlineHelpText>
    <label>Auto Complete In-Progress Responses</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>