force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Maximum_File_Size_in_MB__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Maximum_File_Size_in_MB__c</fullName>
    <description>Enter a maximum size for the file uploaded to the survey solution. To use the default limit of 2.5 MB, leave this field empty.</description>
    <inlineHelpText>Specify the maximum allowed file size for uploads in the survey solution. Enter the size limit in megabytes (MB). If you want to use the default limit of 2.5 MB, leave this field empty.</inlineHelpText>
    <label>Maximum File Size (in MB)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>