force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Maximum_Number_of_Files_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Maximum_Number_of_Files_Allowed__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Limit the number of files that can be uploaded with the question.</description>
    <inlineHelpText>Specify the maximum number of files that can be uploaded with each question. This setting limits the number of files that participants can attach to a question response.</inlineHelpText>
    <label>Maximum Number of Files Allowed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>