force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Maximum_Time_Allowed_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Maximum_Time_Allowed_in_Minutes__c</fullName>
    <description>To automatically submit a quiz after a number of minutes from the quiz start, enter the maximum allowed minutes. Keep it empty for no limit.</description>
    <inlineHelpText>Specify the maximum duration, in minutes, allowed for completing the quiz. If a time limit is set, the quiz will be automatically submitted once the specified time has elapsed from the start of the quiz. Leave this field empty if there is no time limit for the quiz.</inlineHelpText>
    <label>Quiz Time Limit (In Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>