force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Message_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Message_Service_Id__c</fullName>
    <description>Message service ID to pass to the messaging service when dispatching text message.</description>
    <inlineHelpText>Message service ID to pass to the messaging service when dispatching text messages.</inlineHelpText>
    <label>Message Service Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>