force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__MMS_Media_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__MMS_Media_URL__c</fullName>
    <description>URL of the media file for sending MMS</description>
    <inlineHelpText>Enter the public URL of the media file you wish to include when sending surveys via MMS. This URL will be used to attach images, videos, or other media content to your multimedia messages.</inlineHelpText>
    <label>MMS Media URL</label>
    <type>Url</type>
</CustomField>