force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Navigation_Button_Display_Options__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Navigation_Button_Display_Options__c</fullName>
    <description>Survey Navigation Button Setting. Like, Top, Bottom and Both of the place.</description>
    <inlineHelpText>Choose the preferred placement of navigation buttons (previous, next, and submit) in the survey response interface. This setting determines where the buttons will be displayed, allowing participants to navigate through the survey and submit their responses. Select the option that aligns with your survey design and provides the best user experience.</inlineHelpText>
    <label>Navigation Button Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show at Top Only</fullName>
            </value>
            <value>
                <fullName>Show at Bottom Only</fullName>
            </value>
            <value>
                <fullName>Show at Top &amp; Bottom</fullName>
            </value>
            <value>
                <fullName>Show at Center Only</fullName>
                <default>true</default>
                <label>Show at Center Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>