force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Notification_Selector__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Notification_Selector__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Used to trigger the workflow rules sending email notifications. A value of 0 means email notifications are not sent.</description>
    <inlineHelpText>Used to trigger the workflow rules sending email notifications. A value of 0 means email notifications are not sent.</inlineHelpText>
    <label>Deprecated Notification Selector</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>