force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Number_assigned__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_assigned__c</fullName>
    <description>Number of users, contacts, email addresses etc. to which the survey has been assigned.</description>
    <inlineHelpText>Number of participants (users, contacts, email addresses) to which the survey has been assigned.</inlineHelpText>
    <label>Assigned Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>