force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Number_Completed__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_Completed__c</fullName>
    <description>Number of assigned surveys that have completed.</description>
    <inlineHelpText>Number of participants (users, contacts, email addresses) that have completed the survey.</inlineHelpText>
    <label>Completed Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>