force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Number_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_In_Progress__c</fullName>
    <description>Number of assigned surveys that are partially completed and have not been submitted.</description>
    <inlineHelpText>Number of participants (users, contacts, email addresses) that are working on the survey responses.</inlineHelpText>
    <label>In Progress Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>