force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Number_Not_Responded__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_Not_Responded__c</fullName>
    <description>Number of surveys that have been assigned where participants have not yet started the response.</description>
    <formula>ArdiraSurvey__Number_assigned__c - (ArdiraSurvey__Number_Completed__c + ArdiraSurvey__Number_In_Progress__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of participants (users, contacts, email addresses) that have not opened the survey.</inlineHelpText>
    <label>Not Responded Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>