force-app/main/default/objects/ArdiraSurvey__Survey__c/fields/ArdiraSurvey__Number_of_Attempts_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_of_Attempts_Allowed__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This setting allows you to specify the number of times a user can retake a quiz in order to pass it. For example, if you set the number of retakes allowed to 3, a user will have up to 3 attempts to pass the quiz.</description>
    <inlineHelpText>Determine the maximum number of quiz retakes allowed to pass the quiz. This setting controls the number of times a quiz taker can retake the quiz if they fail to achieve a passing score within their initial attempt. Once the retake limit is reached, further retakes will be restricted for the participant.</inlineHelpText>
    <label>Quiz Retake Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>